# ataf

./: .gitignore  DESIGN.md  README.md  concept.html  pyproject.toml
deploy/: ataf-server.service  deploy.sh
examples/chat/: README.md  app.py
examples/chat/static/: index.html
examples/circle_area/: README.md  demo.py
src/ataf/: __init__.py
src/ataf/client/: __init__.py  agent.py  policy.py  prompt_template.py  tag_parser.py
src/ataf/client/llm_adapters/: base.py  claude.py
src/ataf/server/: __init__.py  admin_cli.py  builder.py  eventlog.py  executor.py  executor_runner.py  governance.py  lock.py  main.py  protocol.py  registry.py  storage.py
tests/: test_agent.py  test_builder.py  test_claude_adapter.py  test_endpoints.py  test_eventlog.py  test_executor.py  test_governance.py  test_lock.py  test_prompt_template.py  test_registry.py  test_storage.py  test_tag_parser.py
