[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ataf"
version = "0.1.0.dev0"
description = "Agent Tool Acquisition Framework — runtime tool acquisition for AI agents."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
    { name = "Rajesh Ramani" },
]
keywords = ["agents", "llm", "tools", "mcp", "ai", "anthropic", "claude"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]

# Runtime dependencies — kept deliberately small for v0.1.
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.6",
    "anthropic>=0.25",
    "httpx>=0.27",
    "docstring-parser>=0.16",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
ataf-server = "ataf.server.main:run"
ataf-admin = "ataf.server.admin_cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
